--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "firebase": "^7.17.1",
     "firebase-admin": "^9.0.0",
+    "node-persist": "^3.1.0",
     "nodemailer": "^6.4.11",
     "twilio": "^3.39.1"
   }
