add changes according test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "types": ["node"],
     "typeRoots": ["node_modules/@types"]
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "convert.ts"],
   "exclude": ["./src/public/"]
 }
